@@ -1,5 +1,9 @@
 2003-08-30  Casper S. Hornstrup  <chorns@users.sourceforge.net>
 
+	* tools/rmkdir.c: Create all (sub)directories in path on win32.
+
+2003-08-30  Casper S. Hornstrup  <chorns@users.sourceforge.net>
+
 	* bootdata/packages/reactos.dff: Don't include winmm.dll in reactos.cab.
 
 2003-08-29  Casper S. Hornstrup  <chorns@users.sourceforge.net>
